--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<title>Informasi Bisnis</title>
 		<style>
 			:root {
@@ -175,22 +178,25 @@
 				<div class="info-grid">
 					<div class="info-card">
 						<div class="card-header">
-							<div class="icon">$</div>
+							<div class="icon"><i class="fa fa-gift"></i></div>
 							<h2 class="card-title">For Gift</h2>
 						</div>
 						<div class="card-content">
 							<p>Bank BCA</p>
 							<p>0941590305</p>
+							<br />
+							<p>Bank BRI</p>
+							<p>021701082681508</p>
 						</div>
 					</div>
 
 					<div class="info-card">
 						<div class="card-header">
 							<div class="icon">📍</div>
-							<h2 class="card-title">Lokasi Kami</h2>
+							<h2 class="card-title">Hadiah Bisa dikirim</h2>
 						</div>
 						<div class="card-content">
-							<p>Jalan Contoh No. 123, Kota Contoh, 12345</p>
+							<p>Ke alamat dibawah</p>
 							<div class="map-container">
 								<iframe
 									src="https://www.google.com/maps/embed?pb=!4v1759412389139!6m8!1m7!1sTTXiox2uD2kbGeXvk-dWkQ!2m2!1d-5.454209562722546!2d120.2718197222087!3f210.79!4f-9.340000000000003!5f0.4000000000000002"
@@ -207,12 +213,14 @@
 					<div class="info-card">
 						<div class="card-header">
 							<div class="icon">📞</div>
-							<h2 class="card-title">Kontak Kami</h2>
+							<h2 class="card-title">Kontak</h2>
 						</div>
 						<div class="card-content">
-							<p>Kontak Person :</p>
+							<p>Informasi lebih lanjut dapat menghubungi Kontak Person :</p>
 							<p>A.N Uya</p>
-							<a href="tel:+621234567890" class="phone-number">087766936314</a>
+							<a href="https://wa.me/+62087766936314" class="phone-number"
+								>087766936314</a
+							>
 						</div>
 					</div>
 				</div>
