--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<title>Informasi Bisnis</title>
 		<style>
 			:root {
-				--primary-color: #2563eb;
-				--secondary-color: #3b82f6;
-				--accent-color: #1d4ed8;
-				--text-color: #1f2937;
+				--primary-color: #70db7e;
+				--secondary-color: #3bf683;
+				--accent-color: #70da70;
+				--text-color: #1f2733;
 				--light-color: #f9fafb;
 				--border-color: #e5e7eb;
 			}
@@ -143,7 +143,7 @@
 			}
 
 			footer {
-				background: var(--text-color);
+				background: var(--primary-color);
 				color: white;
 				text-align: center;
 				padding: 2rem 0;
@@ -193,10 +193,10 @@
 					<div class="info-card">
 						<div class="card-header">
 							<div class="icon">📍</div>
-							<h2 class="card-title">Hadiah Bisa dikirim</h2>
+							<h2 class="card-title">Lokasi Acara</h2>
 						</div>
 						<div class="card-content">
-							<p>Ke alamat dibawah</p>
+							<p>Klik Maps Dibawah</p>
 							<div class="map-container">
 								<iframe
 									src="https://www.google.com/maps/embed?pb=!4v1759412389139!6m8!1m7!1sTTXiox2uD2kbGeXvk-dWkQ!2m2!1d-5.454209562722546!2d120.2718197222087!3f210.79!4f-9.340000000000003!5f0.4000000000000002"
